--- a/artemis/login.config
+++ b/artemis/login.config
@@ -2,6 +2,7 @@ console {
   org.apache.activemq.artemis.spi.core.security.jaas.PropertiesLoginModule sufficient
     org.apache.activemq.jaas.properties.user="artemis-users.properties"
     org.apache.activemq.jaas.properties.role="artemis-roles.properties"
+    baseDir="${artemis.instance}/etc"
   ;
 
   /*
@@ -16,6 +17,7 @@ activemq {
   org.apache.activemq.artemis.spi.core.security.jaas.PropertiesLoginModule sufficient
     org.apache.activemq.jaas.properties.user="artemis-users.properties"
     org.apache.activemq.jaas.properties.role="artemis-roles.properties"
+    baseDir="${artemis.instance}/etc"
   ;
 
   org.keycloak.adapters.jaas.DirectAccessGrantsLoginModule required
