--- a/prometheus/prometheus-additional-scrape-secret.yaml
+++ b/prometheus/prometheus-additional-scrape-secret.yaml
@@ -92,6 +92,16 @@ stringData:
         target_label: __metrics_path__
         replacement: /api/v1/nodes/${1}/proxy/metrics
 
+    - job_name: spoke-01-broker
+      scrape_interval: 30s
+      scrape_timeout: 10s
+      scheme: http
+      basic_auth:
+        username: "admin"
+        password: "admin"
+      static_configs:
+        - targets: ['spoke-01-broker-prometheus-0-svc-artemis.apps.spoke1.sandbox1459.opentlc.com:80']
+
     - job_name: spoke-02-broker
       scrape_interval: 30s
       scrape_timeout: 10s
@@ -100,4 +110,14 @@ stringData:
         username: "admin"
         password: "admin"
       static_configs:
-        - targets: ['73.229.244.230:8161']
+        - targets: ['spoke2.headless.default.svc.cluster.local:8161']
+
+    - job_name: spoke-03-broker
+      scrape_interval: 30s
+      scrape_timeout: 10s
+      scheme: http
+      basic_auth:
+        username: "admin"
+        password: "admin"
+      static_configs:
+        - targets: ['spoke3.headless.default.svc.cluster.local:8161']
